tests/testcases/valid/classes/09_inheritance_complete_base.ciel
// Test: Class inheritance with complete base class
// Expected: No errors - base class is complete

class Base {
    private:
        int value;
    public:
        int getValue();
};

class Derived : public Base {
    private:
        float extra;
};

class Derived d_var;

int main() {
    return 0;
}
